--- a/index.html
+++ b/index.html
@@ -17,28 +17,36 @@
         <nav class="w-full">
           <div class="px-4 h-20 flex items-center justify-between md:px-8">
             <!-- Logo -->
-            <a class="flex items-center w-[251px]" href="index.html">
+            <a
+              class="flex items-center w-[146px] md:w-[251px]"
+              href="index.html"
+            >
               <img
                 src="/coast_logo.png"
                 alt="Coast Logo"
-                class="h-6.5 w-full"
+                class="w-full hidden md:block"
+              />
+              <img
+                src="/logo-mobile.png"
+                alt="Coast Logo"
+                class="w-full block md:hidden"
               />
             </a>
 
             <!-- Center Nav Links -->
             <div class="hidden w-[460px] md:flex md:justify-center gap-8">
               <a
-                href="/"
+                href="/new/"
                 class="text-[#2A2A2A] font-Manrope font-bold text-base"
                 >Home</a
               >
               <a
-                href="/#services-we-offer"
+                href="/new/#services-we-offer"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Services</a
               >
               <a
-                href="/#who-we-are"
+                href="/new/#who-we-are"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Who We Are</a
               >
@@ -48,7 +56,7 @@
                 >Careers</a
               >
               <a
-                href="/#contact-us"
+                href="/new//#contact-us"
                 class="text-[#2A2A2A] font-Manrope font-medium text-base opacity-50 hover:opacity-100 active:font-bold"
                 >Contacts</a
               >
@@ -66,7 +74,7 @@
               <button id="mobile-menu-toggle" class="md:hidden">
                 <img
                   id="menu-icon"
-                  src="/burger_menu.svg"
+                  src="/new/burger_menu.svg"
                   alt="Menu"
                   class="h-6 w-6"
                 />
@@ -82,19 +90,19 @@
         >
           <div class="flex flex-col items-center gap-6 w-full">
             <a
-              href="/"
+              href="/new/"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Home
             </a>
             <a
-              href="/#services-we-offer"
+              href="/new/#services-we-offer"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Services
             </a>
             <a
-              href="/#who-we-are"
+              href="/new/#who-we-are"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Who We Are
@@ -106,7 +114,7 @@
               Careers
             </a>
             <a
-              href="/#contact-us"
+              href="/new//#contact-us"
               class="block w-full text-center font-Manrope text-2xl font-bold leading-[38.4px] text-[#2A2A2A]"
             >
               Contacts
@@ -171,7 +179,7 @@
           CRM, we build tools that improve complex systems.
         </p>
         <a
-          href="#"
+          href="/new/#services-we-offer"
           class="inline-block bg-[#E0EDBF] text-[#2A2A2A] px-6 py-3 rounded-md text-base font-Manrope font-semibold hover:bg-gray-100 transition md:bg-black md:text-white md:hover:bg-gray-900"
         >
           Our Services
@@ -921,15 +929,17 @@
           class="font-Manrope text-base flex justify-between w-full md:max-w-[516px]"
         >
           <div class="flex flex-col gap-6">
-            <a href="/" class="hover:underline">Home</a>
-            <a href="/#contact-us" class="hover:underline">Contacts</a>
+            <a href="/new/" class="hover:underline">Home</a>
+            <a href="/new//#contact-us" class="hover:underline">Contacts</a>
           </div>
           <div class="flex flex-col gap-6">
             <a href="/join-us.html" class="hover:underline">Careers</a>
-            <a href="/#who-we-are" class="hover:underline">Who We Are</a>
+            <a href="/new/#who-we-are" class="hover:underline">Who We Are</a>
           </div>
           <div>
-            <a href="/#services-we-offer" class="hover:underline">Services</a>
+            <a href="/new/#services-we-offer" class="hover:underline"
+              >Services</a
+            >
           </div>
         </div>
 
