--- a/join-us.html
+++ b/join-us.html
@@ -209,7 +209,7 @@
           </p>
 
           <h2
-            class="max-w-[1135px] w-full text-3xl md:text-5xl font-bold font-Manrope leading-tight"
+            class="max-w-[1135px] w-full text-[32px] md:text-5xl font-bold font-Manrope leading-tight"
           >
             <span class="text-[#2A2A2A]">At Coast Interactive</span>
             <span class="text-neutral-500">
@@ -840,11 +840,12 @@
               </p>
             </div>
 
-            <button
+            <a
+              href="mailto:info@coastinteractive.com"
               class="mt-4 inline-flex items-center justify-center px-4 py-2 h-14 w-40 bg-[#171717] text-[#FAFAFA] text-base font-medium font-Manrope leading-6 rounded-lg shadow-[0_1px_2px_rgba(0,0,0,0.05)]"
             >
               Send CV
-            </button>
+            </a>
           </div>
 
           <!-- Refer a Friend -->
@@ -868,11 +869,12 @@
               </p>
             </div>
 
-            <button
+            <a
+              href="mailto:info@coastinteractive.com"
               class="mt-4 inline-flex items-center justify-center px-4 py-2 h-14 w-40 bg-[#171717] text-[#FAFAFA] text-base font-medium font-Manrope leading-6 rounded-lg shadow-[0_1px_2px_rgba(0,0,0,0.05)]"
             >
               Refer a Friend
-            </button>
+            </a>
           </div>
         </div>
       </section>
