--- a/index.html
+++ b/index.html
@@ -210,73 +210,74 @@
 
           <!-- Card / Bar -->
           <div
-            class="bg-[#2A2A2A] rounded-[24px] md:rounded-[32px] px-4 md:px-8 py-10 md:py-8 flex flex-wrap md:flex-nowrap items-center justify-between gap-3 md:gap-4 shadow-lg"
+            class="bg-[#2A2A2A] rounded-[24px] md:rounded-[32px] px-4 md:px-8 py-10 md:py-8 shadow-lg"
           >
-            <!-- .NET -->
             <div
-              class="flex flex-col items-center justify-center gap-3 text-center max-w-[140px] md:max-w-1/4 w-full"
+              class="grid grid-cols-2 md:grid-cols-4 gap-x-6 gap-y-8 md:gap-y-4 items-start justify-items-center"
             >
-              <img
-                src="/dot-net.png"
-                alt=".NET"
-                class="w-12 h-12 md:w-16 md:h-16"
-              />
-
-              <p
-                class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+              <!-- .NET -->
+              <div
+                class="flex flex-col items-center justify-center gap-3 text-center max-w-[440px] w-full"
               >
-                Microsoft .NET Core
-              </p>
-            </div>
+                <img
+                  src="/dot-net.png"
+                  alt=".NET"
+                  class="w-12 h-12 md:w-16 md:h-16 object-contain"
+                />
+                <p
+                  class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+                >
+                  Microsoft .NET Core
+                </p>
+              </div>
 
-            <!-- React / Modern JS -->
-            <div
-              class="flex flex-col items-center gap-3 text-center max-w-[140px] md:max-w-1/4 w-full"
-            >
-              <img
-                src="/react.png"
-                alt="React"
-                class="w-12 h-12 md:w-16 md:h-16"
-              />
-
-              <p
-                class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+              <!-- React / Modern JS -->
+              <div
+                class="flex flex-col items-center justify-center gap-3 text-center max-w-[440px] w-full"
               >
-                React / Modern JavaScript
-              </p>
-            </div>
+                <img
+                  src="/react.png"
+                  alt="React"
+                  class="w-12 h-12 md:w-16 md:h-16 object-contain"
+                />
+                <p
+                  class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+                >
+                  React / Modern JavaScript
+                </p>
+              </div>
 
-            <!-- SQL Server -->
-            <div
-              class="flex flex-col items-center gap-3 text-center max-w-[140px] md:max-w-1/4 w-full"
-            >
-              <img
-                src="/sql.png"
-                alt="SQL Server"
-                class="w-12 h-12 md:w-16 md:h-16"
-              />
-
-              <p
-                class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+              <!-- SQL Server -->
+              <div
+                class="flex flex-col items-center justify-center gap-3 text-center max-w-[440px] w-full"
               >
-                SQL Server
-              </p>
-            </div>
+                <img
+                  src="/sql.png"
+                  alt="SQL Server"
+                  class="w-12 h-12 md:w-16 md:h-16 object-contain"
+                />
+                <p
+                  class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+                >
+                  SQL Server
+                </p>
+              </div>
 
-            <!-- DevOps -->
-            <div
-              class="flex flex-col items-center gap-3 text-center max-w-[140px] md:max-w-1/4 w-full"
-            >
-              <img
-                src="/devops.png"
-                alt="DevOps"
-                class="w-12 h-12 md:w-16 md:h-16"
-              />
-              <p
-                class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+              <!-- DevOps -->
+              <div
+                class="flex flex-col items-center justify-center gap-3 text-center max-w-[440px] w-full"
               >
-                DevOps + CI/CD Pipelines
-              </p>
+                <img
+                  src="/devops.png"
+                  alt="DevOps"
+                  class="w-12 h-12 md:w-16 md:h-16 object-contain"
+                />
+                <p
+                  class="font-Manrope text-[16px] leading-[1.6] text-[#F1F1F1]/80"
+                >
+                  DevOps + CI/CD Pipelines
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -300,7 +301,7 @@
             <div class="inline-flex items-center whitespace-nowrap">
               <!-- Left faint -->
               <span
-                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#FFFFFF]"
               >
                 Services We Offer
               </span>
@@ -314,7 +315,7 @@
 
               <!-- Right faint -->
               <span
-                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#E7E3E3]"
+                class="font-Manrope font-extrabold text-[32px] md:text-[64px] text-[#FFFFFF]"
               >
                 Services We Offer
               </span>
@@ -336,7 +337,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-ai.jpg')] md:bg-[url('/ai.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -360,7 +361,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-integration.jpg')] md:bg-[url('/integration.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -384,7 +385,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-design.jpg')] md:bg-[url('/design.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -408,7 +409,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-platforms.jpg')] md:bg-[url('/platforms.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-6 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -643,11 +644,12 @@
                 solutions, including applications, components, integration, or
                 QA/QC.
               </p>
-              <button
-                class="bg-[#E0EDBF] text-[#2A2A2A] text-base font-bold font-Manrope leading-6 px-4 py-3 rounded-md"
+              <a
+                href="/new/join-us.html#open-positions"
+                class="inline-block bg-[#E0EDBF] text-[#2A2A2A] text-base font-bold font-Manrope leading-6 px-4 py-3 rounded-md"
               >
                 View Open Positions
-              </button>
+              </a>
             </div>
 
             <!-- slider bar -->
