--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-ai.jpg')] md:bg-[url('/ai.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 text-center md:text-left md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -361,7 +361,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-integration.jpg')] md:bg-[url('/integration.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 text-center md:text-left md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -385,7 +385,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-design.jpg')] md:bg-[url('/design.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 text-center md:text-left md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -409,7 +409,7 @@
                     class="w-full h-full flex flex-col md:flex-row justify-between items-center bg-[url('/mob-platforms.jpg')] md:bg-[url('/platforms.jpg')] bg-cover bg-center bg-no-repeat"
                   >
                     <div
-                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 md:gap-8"
+                      class="flex-1 pl-0 md:pl-24 py-16 md:py-24 flex flex-col justify-start items-start gap-4 text-center md:text-left md:gap-8"
                     >
                       <h2
                         class="text-[#E0EDBF] text-2xl md:text-5xl font-bold font-Manrope leading-tight"
@@ -952,7 +952,7 @@
           <div class="flex w-[336px] justify-between">
             <p class="opacity-50 w-5">Address:</p>
             <p class="w-[232px]">
-              2010-1002 Sherbrooke O,<br />Montreal QC H3A 3L6
+              1525-1002 Sherbrooke O,<br />Montreal QC H3A 3L6
             </p>
           </div>
 
